# ChangeLog for net-misc/freerdp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.16 2011/12/04 04:20:05 floppym Exp $

  04 Dec 2011; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Reorder maintainers.

*freerdp-1.0_beta2 (28 Nov 2011)

  28 Nov 2011; Mike Gilbert <floppym@gentoo.org> +freerdp-1.0_beta2.ebuild:
  Version bump.

  14 Nov 2011; Mike Gilbert <floppym@gentoo.org> freerdp-1.0_beta1.ebuild:
  Add missing debug options.

  14 Nov 2011; Mike Gilbert <floppym@gentoo.org> freerdp-1.0_beta1.ebuild,
  freerdp-9999.1.ebuild, metadata.xml:
  Add optional ffmpeg, smartcard, and xv support, and a few more debug options.
  Make build output verbose. Misc cleanup.

*freerdp-1.0_beta1 (11 Nov 2011)

  11 Nov 2011; Mike Gilbert <floppym@gentoo.org> +freerdp-1.0_beta1.ebuild:
  1.0 is in beta. This is a complete rewrite.

  01 Oct 2011; Peter Volkov <pva@gentoo.org> freerdp-9999.1.ebuild,
  metadata.xml:
  Add debug-* and sse2 USE flags, bug #381409.

  07 Sep 2011; Mike Gilbert <floppym@gentoo.org> freerdp-9999.1.ebuild:
  Install README.

*freerdp-9999.1 (07 Sep 2011)

  07 Sep 2011; Mike Gilbert <floppym@gentoo.org> +freerdp-9999.1.ebuild,
  metadata.xml:
  Add live ebuild for the 1.0 rewrite

  04 Sep 2011; Mike Gilbert <floppym@gentoo.org> freerdp-9999.ebuild,
  metadata.xml:
  Rewrite the live ebuild; point it at the old (working) git repo. Thanks
  to Ferry on bug 381409 for reporting.

  03 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
  Drop unused local desc.

  15 Mar 2011; Markos Chandras <hwoarang@gentoo.org> freerdp-9999.ebuild:
  Change git repository for the new one located on github. Bug #358747

  12 Mar 2011; Markos Chandras <hwoarang@gentoo.org> freerdp-0.8.2.ebuild,
  freerdp-9999.ebuild:
  Remove largefile useflag per bug #358283

  22 Feb 2011; Markos Chandras <hwoarang@gentoo.org> freerdp-0.8.2.ebuild,
  freerdp-9999.ebuild: