@@ -5,16 +5,16 @@ DIST FreeRDP-1.0-beta1.tar.gz 3459584 RMD160 ed7ffb7714a68ba166641d2150b11441874
 DIST FreeRDP-1.0-bete2.tar.gz 3466462 RMD160 e5ced27c06d8dc142d49f6bdc4cdb1a8bbc3d12c SHA1 4fde19cc1098661f3bd4cc080865070410c37c2a SHA256 965503cb3b2ae2bfb11d261bab8617ef3d6c0a870f104c7d4f5dbc9f0b201470
 DIST freerdp-0.8.2.tar.gz 936410 RMD160 273e03d598e19900508ff23fde365f7140781917 SHA1 32ea0876357c9906784bd6d8ce6d0a8e7c10ebc4 SHA256 389a707b491bd1905c8395ede3df61ac73a55d866f8a56354c6442c23c8730e1
 EBUILD freerdp-0.8.2.ebuild 2516 RMD160 6a3a2ae32d33f5474064ec13add6174e1018f313 SHA1 f03fd68035c5a92028ebfc801139f26f88007684 SHA256 85c7a7907722ec58ae2ebea498b793a3bac824cff74bda9fd7da9916960ccd19
-EBUILD freerdp-1.0_beta1.ebuild 2167 RMD160 f6d25052c49a62774e422ea100e6ea5f011bef8a SHA1 120f04981e9e273a2c89730a952b5ca300aa1a3f SHA256 9711626ad5754b904fddd3639d7df4c4be545e7d54dde1a3ee04aa2a3247affe
-EBUILD freerdp-1.0_beta2.ebuild 2177 RMD160 936618c8ccdf47605be2d827b04337fe59f20b27 SHA1 05dcb1864c6861103da60693c22fa4e08b6e5cfe SHA256 dd121e3b49deab089a48cd1b69e81278bcac40aa73de1b64de629cfa8bcd2606
-EBUILD freerdp-9999.1.ebuild 2124 RMD160 c9c29f033ad007771914680f924d649f0315b454 SHA1 f44963a1580dbb8befebe575604ae570118f2eab SHA256 d08ed3d19d5111ccd780cc667a0d4181eb37dd6fd2d01f3e0e750734e35bdb03
+EBUILD freerdp-1.0_beta1.ebuild 2167 RMD160 3f3b8880cfa0fef4a54450a0d3a3dbf67190308f SHA1 f1021b7cc0478529299fcddb3769d28e06b3d2b3 SHA256 6351637f18781f79028bbc6f2255ebe9806dffe55d258174d245579168857935
+EBUILD freerdp-1.0_beta2.ebuild 2177 RMD160 b0ecff927414071d350773e62bffa4bb19031fb6 SHA1 af4b144d8bee1ba43dbd268f47b18f7d4e9d2052 SHA256 c55dcde3cd997da373e4b523737fd2fdf599d1318a34659ec0d54115a89ca713
+EBUILD freerdp-9999.1.ebuild 2124 RMD160 88dc0d62420ad87cd55cb11eaf1b0c60fa8c2874 SHA1 a00de30c082e9b3a40c2d1ec8b8f9b3d4826617f SHA256 1cf94b9ab492bd1133bd5eeaa1644f2a9f4f41e559c78dd0a048d6e9f68a09c7
 EBUILD freerdp-9999.ebuild 2170 RMD160 32e259681d921fb55b1a1b346e9a4f59e8d9d993 SHA1 e8071faa181821459b183856c097a3bd81e4dd9e SHA256 5ae873b00c69b11238a3e3232ec1850f2da842bac14f234667bd9bbf890d347b
-MISC ChangeLog 2415 RMD160 c33965cb99a1c364eb01b112990d0c187a1b1285 SHA1 605f0875ffeb0e608b7d4c7545d629f7a88a4fc1 SHA256 f85462e50a2751c97f1f26c902d8101b007b18fb9ca520785a6089e3234fc29b
-MISC metadata.xml 2464 RMD160 c4cd7a23beb3a38c7a2bd108d6a335540b44e6dd SHA1 5b0cda17e151d9cf7fd9b0dbcd6479a0a756353e SHA256 f08c9cf2b582eddc0740930c53b000342873dd86548ca47b99c80477427908bd
+MISC ChangeLog 2694 RMD160 a4cba4d8a3feee822427e84543af92490c4b8f7a SHA1 c8702b8468726c3fb9403983f2e8fb8394637815 SHA256 ec6b163465c58a542c057e22e706e3a6629514c995d4aa7ca37b67dc29fdf0af
+MISC metadata.xml 2311 RMD160 c349d644849a10fc0537f1541a751998ef0ab39b SHA1 847bf8f664dfc403b54e6b70e42bffce3d653629 SHA256 cb74eb4dfd1dd335c74aad9385e98179027edd9eff42591917abe607aa795fbd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7a9P0ACgkQC77qH+pIQ6QzlAEAsfwMBD3E9pNYVWfFHPXweQ+Q
-C7s7PirMGr8/4v7hclMBALDU7nPrY/PD1wJa75Pl7yHWrigSfE+iYkizJYQ2hpiF
-=JBTZ
+iF4EAREIAAYFAk7bAOAACgkQC77qH+pIQ6SXtAD+NFsl8DRRyj9Y2q3RC2/V7X1Y
+kzs1v8AjIoz8nqGnk3IA/24yGMR3GY9ZsrNEQJQhXEOV3tg1pujIS7fPaZZmy0yG
+=UaI1
 -----END PGP SIGNATURE-----
