@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/freerdp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.16 2011/12/04 04:20:05 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.17 2011/12/04 05:10:47 floppym Exp $
+
+  04 Dec 2011; Mike Gilbert <floppym@gentoo.org> freerdp-1.0_beta1.ebuild,
+  freerdp-1.0_beta2.ebuild, freerdp-9999.1.ebuild, metadata.xml:
+  Add missing dependency on docbook-xml-dtd, bug 392707. Consolidate X-related
+  use flags, and don't enable alsa cups, and X by default.
 
   04 Dec 2011; Mike Gilbert <floppym@gentoo.org> metadata.xml:
   Reorder maintainers.
